monitoring/metrics/prometheus-stack/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-stack
  labels:
    # PodSecurity labels to allow privileged containers like dcgm-exporter
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
